// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`suggestion mode: add a block to a column 1`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="left-p">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: add a block to a column 2`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="left-p">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
      <blockContainer id="2">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Added to the left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: add a block to a column 3`] = `
"<doc>
  <blockGroup>
    <columnList id="cols">
      <column id="col-left" width="1">
        <blockContainer id="left-p">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
        </blockContainer>
        <y-attributed-insert userIds="">
          <blockContainer id="2">
            <y-attributed-insert userIds="">
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-insert userIds="">Added to the left column</y-attributed-insert>
              </paragraph>
            </y-attributed-insert>
          </blockContainer>
        </y-attributed-insert>
      </column>
      <column id="col-right" width="1">
        <blockContainer id="1">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
        </blockContainer>
      </column>
    </columnList>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: create two columns 1`] = `
"<blockGroup>
  <blockContainer id="intro">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">Intro paragraph</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: create two columns 2`] = `
"<blockGroup>
  <blockContainer id="intro">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">Intro paragraph</paragraph>
  </blockContainer>
  <columnList id="1">
    <column id="2" width="1">
      <blockContainer id="3">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="4" width="1">
      <blockContainer id="5">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: create two columns 3`] = `
"<doc>
  <blockGroup>
    <blockContainer id="intro">
      <paragraph backgroundColor="default" textAlignment="left" textColor="default">Intro paragraph</paragraph>
    </blockContainer>
    <y-attributed-insert userIds="">
      <columnList id="1">
        <y-attributed-insert userIds="">
          <column id="2" width="1">
            <y-attributed-insert userIds="">
              <blockContainer id="3">
                <y-attributed-insert userIds="">
                  <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                    <y-attributed-insert userIds="">Left column</y-attributed-insert>
                  </paragraph>
                </y-attributed-insert>
              </blockContainer>
            </y-attributed-insert>
          </column>
        </y-attributed-insert>
        <y-attributed-insert userIds="">
          <column id="4" width="1">
            <y-attributed-insert userIds="">
              <blockContainer id="5">
                <y-attributed-insert userIds="">
                  <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                    <y-attributed-insert userIds="">Right column</y-attributed-insert>
                  </paragraph>
                </y-attributed-insert>
              </blockContainer>
            </y-attributed-insert>
          </column>
        </y-attributed-insert>
      </columnList>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: remove a column 1`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="2">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: remove a column 2`] = `
"<blockGroup>
  <blockContainer id="1">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: remove a column 3`] = `
"<doc>
  <blockGroup>
    <y-attributed-delete userIds="">
      <columnList id="cols">
        <y-attributed-delete userIds="">
          <column id="col-left" width="1">
            <y-attributed-delete userIds="">
              <blockContainer id="1">
                <y-attributed-delete userIds="">
                  <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                    <y-attributed-delete userIds="">Left column</y-attributed-delete>
                  </paragraph>
                </y-attributed-delete>
              </blockContainer>
            </y-attributed-delete>
          </column>
        </y-attributed-delete>
        <y-attributed-delete userIds="">
          <column id="col-right" width="1">
            <y-attributed-delete userIds="">
              <blockContainer id="2">
                <y-attributed-delete userIds="">
                  <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                    <y-attributed-delete userIds="">Right column</y-attributed-delete>
                  </paragraph>
                </y-attributed-delete>
              </blockContainer>
            </y-attributed-delete>
          </column>
        </y-attributed-delete>
      </columnList>
    </y-attributed-delete>
    <y-attributed-insert userIds="">
      <blockContainer id="1">
        <y-attributed-insert userIds="">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">
            <y-attributed-insert userIds="">Left column</y-attributed-insert>
          </paragraph>
        </y-attributed-insert>
      </blockContainer>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: remove a column from three 1`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-middle" width="1">
      <blockContainer id="2">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Middle column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="3">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: remove a column from three 2`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-middle" width="1">
      <blockContainer id="2">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Middle column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: remove a column from three 3`] = `
"<doc>
  <blockGroup>
    <columnList id="cols">
      <column id="col-left" width="1">
        <blockContainer id="1">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
        </blockContainer>
      </column>
      <column id="col-middle" width="1">
        <blockContainer id="2">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Middle column</paragraph>
        </blockContainer>
      </column>
      <y-attributed-delete userIds="">
        <column id="col-right" width="1">
          <y-attributed-delete userIds="">
            <blockContainer id="3">
              <y-attributed-delete userIds="">
                <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                  <y-attributed-delete userIds="">Right column</y-attributed-delete>
                </paragraph>
              </y-attributed-delete>
            </blockContainer>
          </y-attributed-delete>
        </column>
      </y-attributed-delete>
    </columnList>
  </blockGroup>
</doc>"
`;
